# zeus-engine

./: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
apps/zeus-editor/: CMakeLists.txt  README.md
apps/zeus-editor/src/: AppTheme.cpp  AppTheme.h  AssetBrowserWidget.cpp  AssetBrowserWidget.h  AssetStudioWidget.cpp  AssetStudioWidget.h  EditorIcons.cpp  EditorIcons.h  JobPanelWidget.cpp  JobPanelWidget.h  MainWindow.cpp  MainWindow.h  Profile.cpp  Profile.h  RemoteExplorerWidget.cpp  RemoteExplorerWidget.h  SshRunner.cpp  SshRunner.h  TerminalBridge.cpp  TerminalBridge.h  TerminalSession.cpp  TerminalSession.h  TerminalWidget.cpp  TerminalWidget.h  main.cpp
docs/zeus/: README.md  content-pipeline.md  engine-plan.md  tooling-plan.md
scripts/: build-packages.mjs  check-package-exports.mjs  editor-cmake.mjs  editor-kill-server.mjs
tests/: authoritative-room-tick-runner.test.ts  chunk-streamer.test.ts  net-browser-boundary.test.ts  performance-bench.test.ts  renderer-pixi-static-chunks.test.ts  runtime-primitives.test.ts  web-socket-room.test.ts  world-layers.test.ts
